--- a/ShaBiDi/Views/CreateIndicWindow.xaml
+++ b/ShaBiDi/Views/CreateIndicWindow.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="ShaBiDi.Views.CreateIndicWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Création d'indicateur" Height="372" Width="400">
+        Title="Création d'indicateur" Height="372" Width="400" ResizeMode="NoResize" Icon="/ShaBiDi;component/Resources/icon.ico">
     <StackPanel>
-        <Label Content="Sélectionnez l'indicateur que vous souhaitez créer :">
+        <TextBlock Margin="10,10,10,5" FontWeight="Bold" FontSize="14">Création d'indicateur</TextBlock>
+        <Label Content="Sélectionnez l'indicateur que vous souhaitez créer :" Margin="10,0,0,0">
         </Label>
         <ComboBox Name="cbSelectIndic" Margin="10,0,10,0">
             <ComboBoxItem IsSelected="True">Taux de recouvrement</ComboBoxItem>
@@ -12,29 +13,29 @@
             <ComboBoxItem>Dispersion PA</ComboBoxItem>
             <ComboBoxItem>Nombre d'allers retours bandeau / image</ComboBoxItem>
         </ComboBox>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Margin="10,10,0,0">
             <Label Content="User :"></Label>
             <CheckBox Name="cbUser1" Content="1" Margin="5" Checked="cbUser1_Checked" Unchecked="cbUser1_Unchecked" IsChecked="True" ></CheckBox>
             <CheckBox Name="cbUser2" Content="2" Margin="5" Checked="cbUser2_Checked" Unchecked="cbUser2_Unchecked" IsChecked="True"></CheckBox>
             <CheckBox Name="cbUser3" Content="3" Margin="5" Checked="cbUser3_Checked" Unchecked="cbUser3_Unchecked" IsChecked="True"></CheckBox>
         </StackPanel>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
             <Label Content="Ordre :"></Label>
             <CheckBox Name="cbSPA" Content="S-PA" Margin="5" Checked="cbSPA_Checked" Unchecked="cbSPA_Unchecked"></CheckBox>
             <CheckBox Name="cbPAS" Content="PA-S" Margin="5" Checked="cbPAS_Checked" Unchecked="cbPAS_Unchecked"></CheckBox>
         </StackPanel>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
             <Label Content="Modalité :"></Label>
             <CheckBox Name="cbS" Content="S" Margin="5" Checked="cbS_Checked" Unchecked="cbS_Unchecked"></CheckBox>
             <CheckBox Name="cbPA" Content="PA" Margin="5" Checked="cbPA_Checked" Unchecked="cbPA_Unchecked"></CheckBox>
         </StackPanel>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
             <Label Content="Groupe :"></Label>
-            <ListBox Name ="lbGroup" Width="300" Height="100" ItemsSource="{Binding}" SelectionMode="Multiple" SelectionChanged="lbGroup_SelectionChanged"></ListBox>
+            <ListBox x:Name ="lbGroup" Width="300" Height="100" Margin="10,10,0,0" ItemsSource="{Binding}" SelectionMode="Multiple" SelectionChanged="lbGroup_SelectionChanged"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-            <Button x:Name="btnCreateIndic" Content="Ok" Margin="10" Click="btnCreateIndic_Click"></Button>
-            <Button Content="Annuler" Margin="10"></Button>
+            <Button x:Name="btnCreateIndic" Content="Ok" Margin="10" Padding="5,5,5,5" Click="btnCreateIndic_Click"></Button>
+            <Button Content="Annuler" Margin="10" Padding="5,5,5,5"></Button>
         </StackPanel>
 
     </StackPanel>
